<resources>
    <string name="app_name">Parking App</string>
    <string name="frag1_text">Fragment 1</string>
    <string name="frag2_text">Fragment 2</string>
    <string name="title_activity_maps">Map</string>
    <string name="introduction_1">Бронируйте парковочные места на мероприятия</string>
    <string name="introduction_2">Оплачивайте парковку в один клик</string>
    <string name="introduction_3">Стройте маршрут прямо внутри приложения</string>
    <string name="next">Далее</string>
    <string name="skip">Пропустить</string>
    <string name="all_clear">Понятно</string>
    <string name="go">Поехали</string>
    <string name="go_on">Продолжить</string>
    <string name="Ok">Ок</string>
    <string name="pay">Оплатить</string>
    <string name="type_car_number">Введите номер автомобиля</string>
    <string name="i_dont_have_such_number"><u>у меня не такой номер</u></string>
    <string name="type_address">Введите адрес…</string>
    <string name="from">c</string>
    <string name="to">по</string>
    <string name="available_park_spaces">Мест доступно:</string>
    <string name="booking_not_available.change_time">На это время бронь недоступна. Выберите другое время.</string>
    <string name="available_time">Доступное время:</string>
    <string name="payment">Оплата</string>
    <string name="selected_time">Выбранное время:</string>
    <string name="promo_code">промокод</string>
    <string name="master_card">Master Card</string>
    <string name="add_card">Добавить карту</string>
    <string name="menu">Меню</string>
    <string name="booking_history">История бронирования</string>
    <string name="payment_type">Способ оплаты</string>
    <string name="help">Поддержка</string>
    <string name="about_app">О приложении</string>
    <string name="ready">Готово!</string>
    <string name="successful_payment">Оплата прошла успешно</string>
    <string name="scan_qr_code">Просканируйте QR-код при въезде на парковку</string>
    <string name="click_to_open_qr_code">Нажмите, чтобы открыть QR-код</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Payment -->
    <string name="lbl_amount">Сумма:</string>
    <string name="lbl_ccy">Currency:</string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_description">Description:</string>
    <string name="btn_pay_google">GooglePay</string>
    <string name="btn_pay_card">Картой</string>
    <string name="e_invalid_amount">Неверная сумма</string>
    <string name="e_invalid_email">Неправильный email</string>
    <string name="e_invalid_description">Enter description</string>
    <string name="e_google_pay_unsupported">GooglePay не поддерживается</string>
    <string name="e_google_pay_canceled">GooglePay отменен</string>
    <string name="incorrect_car_number">Неправильный номер!</string>
    <string name="car_number_hint">A111AA 178</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="google_pay">Google Pay</string>
    <string name="new_card">Новая карта</string>
    <string name="mastercard_6318">MasterCard ••6318</string>
</resources>
