<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarNumberActivity">

    <EditText
        android:id="@+id/edit_txt_car_number2"
        android:layout_width="220dp"
        android:layout_height="66dp"
        android:layout_marginTop="44dp"
        android:paddingHorizontal="10dp"
        android:ems="10"
        android:maxLength="12"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_type_car_number"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/txt_type_car_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="1dp"
        android:text="@string/type_car_number"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_txt_car_number"
        android:layout_width="230dp"
        android:layout_height="63dp"
        android:layout_marginTop="44dp"
        android:paddingHorizontal="10dp"
        android:ems="10"
        android:hint="@string/car_number_hint"
        android:maxLength="10"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_type_car_number" />

    <TextView
        android:id="@+id/txt_no_such_number"
        android:layout_width="242dp"
        android:layout_height="46dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@android:color/transparent"
        android:text="@string/i_dont_have_such_number"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_car_number" />

    <Button
        android:id="@+id/btn_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="80dp"
        android:text="@string/go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>