<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    tools:context=".SelectPayTypeFragment"
    android:layout_marginTop="20dp"
    android:elevation="20dp"
    android:background="@drawable/fragment_rounded">

    <TextView
        android:id="@+id/txt_google_pay"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:drawableLeft="@drawable/ic_gpay"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="40dp"
        android:text="@string/google_pay"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:backgroundTint="@color/fragment_background_grey"
        android:layout_marginTop="50dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/txt_master_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_master_card"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:drawableLeft="@drawable/ic_mc_card"
        android:gravity="center_vertical"
        android:drawablePadding="42dp"
        android:backgroundTint="@color/fragment_background_grey"
        android:background="@null"
        android:text="@string/mastercard_6318"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/txt_new_card"
        tools:layout_editor_absoluteX="39dp" />

    <TextView
        android:id="@+id/txt_new_card"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingLeft="50dp"
        android:paddingRight="40dp"
        android:drawableLeft="@drawable/ic_card"
        android:backgroundTint="@color/fragment_background_grey"
        android:gravity="center_vertical"
        android:drawablePadding="50dp"
        android:text="@string/new_card"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_scroll_down2"
        android:layout_width="94dp"
        android:layout_height="23dp"
        android:layout_marginTop="10dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/rounded_box_grey"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>