<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CardActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.65"
        android:background="@null"
        android:scaleType="fitXY"
        android:src="@drawable/canvas"/>

    <!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="7dp"-->
<!--                android:text="@string/lbl_ccy" />-->

<!--            <Spinner-->
<!--                android:id="@+id/spinner_ccy"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="7dp" />-->

    <TextView
        android:id="@+id/btn_amount"
        android:layout_width="83dp"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="124dp"
        android:text="@string/lbl_amount"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_amount"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:inputType="none"
        android:maxLength="7"
        android:textSize="30sp"
        android:gravity="end"
        android:textAlignment="gravity"
        android:drawableRight="@drawable/ic_ruble_currency_sign"
        android:background="@null"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btn_amount"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintTop_toTopOf="@id/btn_amount"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/txt_email"
        android:layout_width="167dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:text="@string/lbl_email"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/card_input"
        app:layout_constraintTop_toBottomOf="@+id/card_input" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="345dp"
        android:layout_height="55dp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/fragment_background_grey"
        android:elevation="5dp"
        android:paddingLeft="20dp"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/card_input"
        app:layout_constraintStart_toStartOf="@+id/card_input"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="65dp"
        android:layout_height="38dp"
        android:text="@string/lbl_description"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="102dp"
        android:layout_height="51dp"
        android:inputType="none"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.cloudipsp.android.CardInputView
        android:id="@+id/card_input"
        android:layout_width="354dp"
        android:layout_height="274dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/time_slot_box"
        android:backgroundTint="@color/fragment_background_grey"
        android:elevation="20dp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_amount" />

    <TextView
        android:id="@+id/text_card_type"
        android:layout_width="69dp"
        android:layout_height="55dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.cloudipsp.android.CloudipspWebView
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_pay_card"
        android:layout_width="343dp"
        android:layout_height="65dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        app:layout_constraintVertical_bias="0.387" />

    <Button
        android:id="@+id/btn_pay_google"
        android:layout_width="128dp"
        android:layout_height="53dp"
        android:layout_marginTop="100dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/btn_pay_google"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintTop_toTopOf="@+id/btn_pay_card" />
</androidx.constraintlayout.widget.ConstraintLayout>
